[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://ui/overlays/base_overlay/base_overlay.tscn" id="1_iw2tl"]
[ext_resource type="Script" uid="uid://ck2fggqs1yf4o" path="res://ui/overlays/online_match_result_overlay/online_match_result_overlay.gd" id="2_66d4u"]

[node name="OnlineMatchResultOverlay" instance=ExtResource("1_iw2tl")]
script = ExtResource("2_66d4u")

[node name="RootSection" parent="PanelContainer/SectionsContainer" index="0"]
add_back_button = false

[node name="ResultLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
layout_mode = 2
text = "MATCH ENDED"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "MATCH ABORTED"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "KILLS: 0"
horizontal_alignment = 1

[node name="RewardLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="3"]
unique_name_in_owner = true
layout_mode = 2
text = "REWARD: $0"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="4"]
unique_name_in_owner = true
layout_mode = 2
text = "RETURN TO GARAGE"
